resolve swagger view

--- a/templates/swagger.html
+++ b/templates/swagger.html
@@ -14,7 +14,7 @@
     <script>
         window.onload = function() {
             const ui = SwaggerUIBundle({
-                url: "/static/swagger/swagger.yaml",  // URL du fichier YAML
+                url: "/static/swagger/swagger_v2.yaml",  // URL du fichier YAML
                 dom_id: "#swagger-ui",
                 deepLinking: true,
                 presets: [
